--- a/AluraStoreBr.ipynb
+++ b/AluraStoreBr.ipynb
@@ -1367,21 +1367,19 @@
         "\n",
         "## O faturamento total das lojas.\n",
         "\n",
-        "De acordo com a análise, observa-se que o maior valor de faturamento total é o da loja 1, com R$1.534.511. Os faturamentos das lojas 2 e 3 apresentam valores aproximados, com R$1.488.461 e R$1.464.027, respectivamente. O menor faturamento total é o da loja 4 é de R$1.384.500.\n",
+        "De acordo com a análise, observa-se que o maior valor de faturamento total é o da loja 1, com R$1.534.511.\n",
+        "\n",
+        "Os faturamentos das lojas 2 e 3 apresentam valores aproximados, com R$1.488.461 e R$1.464.027, respectivamente.\n",
+        "\n",
+        "O menor faturamento total é o da loja 4 é de R$1.384.500.\n",
         "\n",
         "## As categorias de produtos mais e menos vendidas.\n",
         "\n",
         "Todas as lojas apresentam as mesmas categorias de produtos, sendo brinquedos, eletrodomésticos, eletrônicos, esporte e lazer, instrumentos musicais, livros, móveis e utilidades domésticas.\n",
         "\n",
-        "As lojas 1, 2 e 3 possuem um padrão de categorias eletrônicos apresentando a maior quantidade de vendas,\n",
+        "As lojas 1, 2 e 3 possuem um padrão de categorias eletrônicos apresentando a maior quantidade de vendas atrelada a categoria eletrônicos e a menor quantidade de vendas a categoria utilidades domésticas.\n",
         "\n",
-        "A categoria mais vendido da loja 1  é eletrônicos, com 448 vendas, enquanto a menos vendida é utilidades domésticas, com 171 vendas.\n",
-        "\n",
-        "A categoria mais vendido da loja 2  é eletrônicos, com 422 vendas, enquanto a menos vendida é utilidades domésticas, com 181 vendas.\n",
-        "\n",
-        "A categoria mais vendido da loja 3  é eletrônicos, com 451 vendas, enquanto a menos vendida é utilidades domésticas, com 177 vendas.\n",
-        "\n",
-        "A categoria mais vendido da loja 1  é móveis, com 480 vendas, enquanto a menos vendida é livros, com 170 vendas.\n",
+        "Porém, a loja 4 apresenta a categoria mais vendido da loja 1  é móveis, com 480 vendas, enquanto a menos vendida é livros, com 170 vendas.\n",
         "\n",
         "## A média das avaliações de clientes por loja.\n",
         "\n",
